--- a/src/styles/blogs/slug.module.scss
+++ b/src/styles/blogs/slug.module.scss
@@ -31,6 +31,36 @@ $brandTextBold : var(--chakra-colors-brand-50);
         }
     }
 
+    h2 {
+        margin:  40px 0 10px;
+        color: $brandTextBold;
+        font-weight: bold;
+        font-size: 18px;
+
+        &:first-child {
+            margin-top: 0px;
+        }
+
+        @media screen and (min-width: 576px) {
+            & {
+                font-size: 28px;
+                margin:  50px 0 20px;
+            }    
+        }
+
+        @media screen and (min-width: 768px) {
+            & {
+                font-size: 32px;
+            }    
+        }
+
+        @media screen and (min-width: 991px) {
+            & {
+                font-size: 36px;
+            }    
+        }
+    }
+
     p {
         margin: 20px 0;
     }
@@ -46,5 +76,9 @@ $brandTextBold : var(--chakra-colors-brand-50);
         &:hover {
             text-decoration: none;
         }
+    }
+
+    ul {
+        list-style-position: inside;
     }
 }
